--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 environment: development
 baseurl: /
 highlighter: pygments
+exclude: ['README.md', 'LICENSE.txt', 'Gemfile']
 gems:
 - jekyll-compass
