--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -1,5 +1,6 @@
 environment: production
 baseurl: /
 highlighter: pygments
+exclude: ['README.md', 'LICENSE.txt', 'Gemfile']
 gems:
 - jekyll-compass
