--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 environment: development
 baseurl: 
 highlighter: pygments
-exclude: ['README.md', 'LICENSE.txt', 'Gemfile', 'scripts']
+exclude: ['README.md', 'LICENSE.txt', 'Gemfile', 'scripts', 'samples']
 gems:
 - jekyll-compass
