--- a/_config_prod.yml
+++ b/_config_prod.yml
@@ -1,6 +1,6 @@
 environment: production
 baseurl: http://www.cppsamples.com
 highlighter: pygments
-exclude: ['README.md', 'LICENSE.txt', 'Gemfile', 'scripts']
+exclude: ['README.md', 'LICENSE.txt', 'Gemfile', 'scripts', 'samples']
 gems:
 - jekyll-compass
